Possible Z-Index Fix

--- a/style2.css
+++ b/style2.css
@@ -45,6 +45,8 @@ display:none;
 .selectItem{
 display:none;
 padding-left:5px;
+position:relative;
+z-index:5;
 }
 
 .selectBlank {
